# algc_codec

./: Cargo.toml  README.md
benches/: bench_codec.rs
src/: codec.rs  lib.rs  main.rs  mod.rs  str_match.rs
src/test_data/: input.data
