[package]
name = "algc_codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_codec"
harness = false